import "Events/DiadocMessage-PostApi.proto";
import "DocumentId.proto";

package AgentSIB.Diadoc.Api.Proto;

message AcquireCounteragentRequest {
	optional string OrgId = 1;
	optional string Inn = 2;
	optional string MessageToCounteragent = 3;
	optional InvitationDocument InvitationDocument = 4;
}

message InvitationDocument {
	required Events.SignedContent SignedContent = 1;
	required string FileName = 2;
	optional bool SignatureRequested = 3 [default = false];
	optional string Type = 4;
}

message AcquireCounteragentResult {
	required string OrgId = 1;
	optional DocumentId InvitationDocumentId = 2;
}