package AgentSIB.Diadoc.Api.Proto;

message AsyncMethodResult {
	optional string TaskId = 1;
}